plogapp/tests/errors/UndeclaredAttribute.plog
sorts
#s = {a}.
attributes
a: #s.
statements
b = true.
